[package]
name = "toptop"
version = "0.1.0"
authors = ["Till Beemelmanns"]
description = "A TUI for monitoring ROS2 topics."
repository = "https://github.com/beemelmanns/toptop"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["ros2", "topics", "monitoring", "tui", "terminal"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
crossbeam = "0.8.4"
crossterm = "0.29.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
once_cell = "1.19"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "process", "time", "macros", "io-util"] }

